--- a/templates/test.html
+++ b/templates/test.html
@@ -2,6 +2,8 @@
 {% load staticfiles %}
 
 <link href="{% static 'main/css/dataTables/dataTables.bootstrap.css' %}" rel="stylesheet" type="text/css" />
+<link href = "{% static 'main/css/table.css'%}" rel = "stylesheet" type="text/css" />
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.11/css/jquery.dataTables.min.css">
 <section class="content">
 <div id="update">
 </div>
@@ -12,46 +14,35 @@
                 <h3 class="box-title">List of all Registered Students</h3>
             </div>
             <!-- /.box-header -->
+            <label>Search:<input aria-controls="example" placeholder="" class="" type="search"></label>
             <div class="box-body table-responsive">
-                <table id="example1" class="table table-bordered table-striped">
-                <thead>
+                <table id="example1" class="table table-bordered table-striped dataTable stripe hover display dataTables_wrapper"  width="100%" cellspacing="0">
+                <thead class="stripe hover display dataTable sorting sorting_asc sorting_desc sorting_asc_disabled sorting_desc_disabled">
                 <tr>
-                    <th>
+                    <th aria-label="First name: activate to sort column ascending" style="width: 98px;" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sorting">
                         POID
                     </th>
-                    <th>
+                    <th aria-label="First name: activate to sort column ascending" style="width: 98px;" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sorting">
                         Name
                     </th>
-                    <th>
-                        PS
+                    <th aria-label="First name: activate to sort column ascending" style="width: 98px;" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sorting">
+                        Polling Station
                     </th>
-                    <th>
-                        last_latitude
-                    </th>
-                    <th>
-                        last_longtitude
-                    </th>
-                    <th>
-                        current_latitude
-                    </th>
-                    <th>
-                        current_longtitute
-                    </th>
-                    <th>
+                    <th aria-label="First name: activate to sort column ascending" style="width: 98px;" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sorting">
                         received_evm
                     </th>
-                    <th>
+                    <th aria-label="First name: activate to sort column ascending" style="width: 98px;" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sorting">
                         reached_polling_station
                     </th>
-                    <th>
+                    <th aria-label="First name: activate to sort column ascending" style="width: 98px;" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sorting">
                         sealed_evm
                     </th>
-                    <th>
+                    <th aria-label="First name: activate to sort column ascending" style="width: 98px;" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sorting">
                         received_release
                     </th>
                 </tr>
                 </thead>
-                <tbody>
+                <tbody class="dataTable">
 {% for k in all %}
     <!-- <b> Name is : {{ a.name }} </b> <br/> unique id of lac is {{ a.unique_id}}  -->
 
@@ -70,15 +61,60 @@
     </td>
 
     <td>
-        {{k.last_latitude}}
+        {{k.recieved_evm}}
     </td>
 
     <td>
-        {{k.last_logtitude}}
+        {{k.reached_polling_station}}
     </td>
+
+    <td>
+        {{k.sealed_evm}}
+    </td>
+
+    <td>
+        {{k.recieved_release}}
+    </td>
+
+    
 </tr>
                                     
 </tbody>
 
 {% endfor %}
-
+<script>
+$(document).ready(function() {
+    $('#example').DataTable( {
+        "processing": true,
+        "serverSide": true,
+        "ajax": "scripts/server_processing.php"
+    } );
+} );
+</script>
+<script type="text/javascript">
+    $(document).ready(function() {
+    // Setup - add a text input to each footer cell
+    $('#example tfoot th').each( function () {
+        var title = $(this).text();
+        $(this).html( '<input type="text" placeholder="Search '+title+'" />' );
+    } );
+ 
+    // DataTable
+    var table = $('#example').DataTable();
+ 
+    // Apply the search
+    table.columns().every( function () {
+        var that = this;
+ 
+        $( 'input', this.footer() ).on( 'keyup change', function () {
+            if ( that.search() !== this.value ) {
+                that
+                    .search( this.value )
+                    .draw();
+            }
+        } );
+    } );
+} );
+</script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/1.10.11/js/jquery.dataTables.min.js"></script>
