--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -11,8 +11,34 @@
     </section>
 
                 <!-- Main content -->
-                
+     <!-- <div class = "info">
+     	Total PO recieved EVM = {{no}}<br />
+     	Total PO reached PS = {{ps}}
+
+     </div> --> 
+             
     <section class="content">
+    	 <div class="row" id="content_area">
+            <div class="col-xs-6">
+                <div class="box">
+                    <div class="box-header">
+                        <h3 class="box-title">Quick Statistics</h3>
+                    </div><!-- /.box-header -->
+                    <div  class="box-body table-responsive">
+                        <table id="example3" class="table table-bordered table-striped">
+                           <tbody>
+                                <tr>
+                                    <td>Total Presiding Officers recieved EVM</td><td>{{no}}</td>                                    
+                                </tr>
+                                <tr>
+                                	<td>Total Presiding Officers reached Polling Station</td><td>{{ps}}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div><!-- /.box-body -->
+                </div><!-- /.box -->
+            </div>
+       </div> 
         <div class="row" id="content_area">
             <div class="col-xs-12">
                 <div class="box">
@@ -80,13 +106,104 @@
             </div>
         </div>
 
+        <div class="row" id="content_area">
+            <div class="col-xs-6">
+                <div class="box">
+                    <div class="box-header">
+                        <h3 class="box-title">Locations of Presiding Officers</h3>
+                    </div><!-- /.box-header -->
+                    <div id="map" class="box-body table-responsive" style="height:500px;">
+                        
+                    </div><!-- /.box-body -->
+                </div><!-- /.box -->
+            </div>
+            <div class="col-xs-6">
+                <div class="box">
+                    <div class="box-header">
+                        <h3 class="box-title">Polling Station Status</h3>
+                    </div><!-- /.box-header -->
+                    <div  class="box-body table-responsive">
+                    <table id="example2" class="table table-bordered table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Polling Station</th>                                   
+                                    <th>Total Voters</th>
+                                    <th>Current Voters</th>
+                                    <th>Percentage</th>
+                                    <th>Reported Time</th>
+                                </tr>
+                            </thead>
+                           
+                            <tbody>
+                            	{% for k in up %}
+                                <tr>
+                                    <td>{{k.polling_station.name}}</td>
+                                    <td>{{k.polling_station.total_voters}}</td>
+                                    <td>{{k.current_votes}}</td>
+                                    <td></td>
+                                    <td>{{k.timestamp|time:"h A"}}</td>
+	
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <th>Polling Station</th>                                   
+                                    <th>Total Voters</th>
+                                    <th>Current Voters</th>
+                                    <th>Percentage</th>
+                                    <th>Reported Time</th>
+                                </tr>
+                            </tfoot>
+                        </table>
+                        
+                    </div><!-- /.box-body -->
+                </div><!-- /.box -->
+            </div>
+        </div>
+
     </section>
+    <div id="map"></div>
+
+
 {% endblock %}
 
 {% block page_js %}
 	<script type="text/javascript">
     	$(function() {
                 $("#example1").dataTable();
+                $("#example2").dataTable();
+                $("#example3").dataTable();
         });             
     </script>
+
+     <script>
+
+
+	function initMap() {
+	  var myLatLng = {lat: 24.5, lng: 92.5};
+
+	  var map = new google.maps.Map(document.getElementById('map'), {
+	    zoom: 8,
+	    center: myLatLng
+	  });
+
+
+		{% for k in all %}
+		  var a = {{k.current_latitude}};
+		  var b = {{k.current_longitude}};
+		  myLatLng = { lat: a , lng: b };
+		  var marker = new google.maps.Marker({
+		    position: myLatLng,
+		    map: map,
+		    title: '{{k.presiding_officer.first_name}}\n{{k.presiding_officer.polling_station.name}}'
+		  });
+
+		  {% endfor %}
+}
+
+    </script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAteM4P82ZpVfZHUA-greFhVVphVI9UcI0&signed_in=true&callback=initMap"></script>
+
 {% endblock %}
