--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -200,7 +200,9 @@
       '</div>'+
       '<h3 id="firstHeading" class="firstHeading">{{k.presiding_officer.polling_station.name}}</h3>'+
       '<div id="bodyContent">'+
-      '<p><b>Total Voters : </b> {{k.presiding_officer.polling_station.total_voters}}' +
+      '<p><b>Presiding Officer : </b> {{k.presiding_officer.full_name}}' +
+      '<br/><b>Total Voters : </b> {{k.presiding_officer.polling_station.total_voters}}' +
+      '<br/><b>Current Voters : </b> {% current_voters k.presiding_officer.polling_station %}' +
       '<br/><b>Current Voting %age : </b> {% current_vote_percentage k.presiding_officer.polling_station %}' +
       '</p>'+
       '</div>'+
@@ -211,7 +213,7 @@
 		  var marker = new google.maps.Marker({
 		    position: myLatLng,
 		    map: map,
-		    title: '{{k.presiding_officer.first_name}} ({{k.presiding_officer.polling_station.name}})'
+		    title: '{{k.presiding_officer.full_name}} ({{k.presiding_officer.polling_station.name}})'
 		  });
           marker.addListener('click', function() {
     infowindow.open(map, marker);
