Details on WebUI - Dashboard

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
         -->
         <title>Poll Friend - {% block title %} {% endblock %} | NIT Silchar</title>
         <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
-        
+       
         <!-- bootstrap 3.0.2 -->
         <link href="{% static 'main/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
         <!-- font Awesome -->
@@ -89,6 +89,11 @@
                             <li>
                                 <a href="#">
                                     <i class="fa fa-dashboard"></i> <span>Dashboard</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="message">
+                                    <i class = " fa fa-weixin" ></i><span>Messaging</span>
                                 </a>
                             </li>
                         </ul>
