--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
     <title>Poll Friend - {% block title %} {% endblock %} | NIT Silchar</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <!-- GCM Manifest file -->
+    <link href="{% static 'main/manifest.json' %}" rel="manifest">
     <!-- Bootstrap 3.3.5 -->
     <link rel="stylesheet" href="{% static 'main/css/bootstrap.min.css' %}">
     <!-- Font Awesome -->
@@ -103,7 +105,6 @@
     </div><!-- ./wrapper -->
 
     <!-- REQUIRED JS SCRIPTS -->
-
     <!-- jQuery 2.1.4 -->
     <script src="{% static 'main/js/jQuery-2.1.4.min.js' %}"></script>
     <!-- Bootstrap 3.3.5 -->
@@ -113,6 +114,8 @@
     <script src="{% static 'main/js/dataTables.bootstrap.min.js' %}" type="text/javascript"></script>
     <!-- AdminLTE App -->
     <script src="{% static 'main/js/app.min.js' %}"></script>
+    <!-- Main JS (responsible for GCM also) -->
+    <script src="{% static 'main/js/main.js' %}"></script>
     <!-- JS for particular pages only -->
     {% block page_js %}{% endblock %}
   </body>
