--- a/templates/messages.html
+++ b/templates/messages.html
@@ -2,79 +2,65 @@
 {% load staticfiles %}
 {% load main_extras %}
 {% block title %} Message Center {% endblock %}
-{% block main_page_title %} Message Center {% endblock %}
+{% block main_page_title %} Message Center - Inbox {% endblock %}
 {% block main_page %}
           <div class="row">
-            <div class="col-md-3">
-              <a href="compose.html" class="btn btn-primary btn-block margin-bottom">Compose</a>
-              <div class="box box-solid">
-                <div class="box-header with-border">
-                  <h3 class="box-title">Folders</h3>
-                  <div class="box-tools">
-                    <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-                  </div>
-                </div>
-                <div class="box-body no-padding">
-                  <ul class="nav nav-pills nav-stacked">
-                    <li class="active"><a href="#"><i class="fa fa-inbox"></i>Inbox</a></li>
-                    <li><a href="#"><i class="fa fa-envelope-o"></i> Sent</a></li>
-                  </ul>
-                </div><!-- /.box-body -->
-              </div><!-- /. box -->
-              <div class="box box-solid">
-                <div class="box-header with-border">
-                  <h3 class="box-title">Sort SOS</h3>
-                  <div class="box-tools">
-                    <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-                  </div>
-                </div>
-                <div class="box-body no-padding">
-                  <ul class="nav nav-pills nav-stacked">
-                    <li><a href="#"><i class="fa fa-circle-o text-red"></i> Danger</a></li>
-                    <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> Bad</a></li>
-                  </ul>
-                </div><!-- /.box-body -->
-              </div><!-- /.box -->
-            </div><!-- /.col -->
-            <div class="col-md-9">
-              <div class="box box-primary">
-                <div class="box-header with-border">
-                  <h3 class="box-title">Inbox</h3>
-                  <div class="box-tools pull-right">
-                    <div class="has-feedback">
-                      <input type="text" class="form-control input-sm" placeholder="Search Messages">
-                      <span class="glyphicon glyphicon-search form-control-feedback"></span>
-                    </div>
-                  </div><!-- /.box-tools -->
-                </div><!-- /.box-header -->
-                <div class="box-body no-padding">
-                  <div class="table-responsive mailbox-messages">
-                    <table class="table table-hover table-striped">
-                      <tbody>
-                        <tr>
-                          <td class="mailbox-date">1</td>
-                          <td class="mailbox-name"><a href="read-mail.html">Harsh Vardhan Ladha</a></td>
-                          <td class="mailbox-subject"><b>FIghts and Riots</b> - SImple Message...</td>
-                          <td class="mailbox-attachment btn btn-danger">&nbsp;Danger&nbsp;</td>
-                          <td class="mailbox-date">5 mins ago</td>
-                        </tr>
-                        <tr>
-                          <td class="mailbox-date">2</td>
-                          <td class="mailbox-name"><a href="read-mail.html">Yogesh Chauhan</a></td>
-                          <td class="mailbox-subject"><b>FIghts and Riots</b> - SImple Message...</td>
-                          <td class="mailbox-attachment btn btn-warning">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Bad&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                          <td class="mailbox-date">28 mins ago</td>
-                        </tr>
-                      </tbody>
-                    </table><!-- /.table -->
-                  </div><!-- /.mail-box-messages -->
-                </div><!-- /.box-body -->
-                <div class="box-footer no-padding">
+            <div class="col-md-12">
+                <div class="box box-primary">
+                    <div class="box-header">
+                        <h3 class="box-title">Inbox</h3>
+                    </div><!-- /.box-header -->
+                    <div class="box-body table-responsive">
+                        <table id="example1" class="table">
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>Polling Station</th>
+                                    <th>Subject</th>
+                                    <th>Message</th>
+                                    <th>Condition</th>
+                                    <th>Image</th>
+                                    <th>Timestamp</th>
+                                </tr>
+                            </thead>
 
-
-                </div>
-              </div><!-- /. box -->
+                            <tbody>
+                                {% for s in sos_messages %}
+                            	<tr>
+                                    <td>{{ s.id }}</td>
+                                    <td>{{ s.polling_station.name }}</td>
+                                    <td>
+                                        {% if s.subject %}
+                                            {{ s.get_subject_display }}
+                                        {% endif %}
+                                    </td>
+                                    <td>{{ s.message }}</td>
+                                    <td>
+                                        {% if s.condition %}
+                                            {{ s.get_condition_display }}
+                                        {% endif %}
+                                    </td>
+                                    <td>
+                                        {% if s.image %}
+                                            <a href="{{ MEDIA_URL }}{{ s.image }}" target="_blank">View Image</a>
+                                        {% endif %}
+                                    </td>
+                                    <td>{{ s.timestamp }}</td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div><!-- /.box-body -->
+                </div><!-- /.box -->
             </div><!-- /.col -->
           </div><!-- /.row -->
 
+{% endblock %}
+
+{% block page_js %}
+    <script type="text/javascript">
+    	$(document).ready(function() {
+                $("#example1").DataTable();
+        });
+    </script>
 {% endblock %}
