--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -17,8 +17,13 @@
             </li>
          </ul>
     </li>
-    <li {% if page == "/polling-stations/" %} class="active" {% endif %}>
-        <a href="/polling-stations/"><i class="fa fa-archive"></i> <span>Polling Stations</span></a>
+    <li {% if page == 'polling_station' %} class=" treeview active" {% else %} class="treeview" {% endif %}>
+        <a href="#"><i class="fa fa-archive"></i> <span>Polling Stations</span><i class = "fa fa-angle-left pull-right"></i></a>
+        <ul class="treeview-menu">
+            <li {% if page = "#" %} class = "active" {% endif%} >
+                <a href= "/polling-station/view"><i class="fa fa-eye"></i><span>View</span></a>
+            
+        </ul>
     </li>
     <li {% if page == "/presiding-officers/" %} class="active" {% endif %}>
         <a href="/presiding-officers/"><i class="fa fa-group"></i> <span>Presiding Officers</span></a>
