--- a/templates/pollingstation_list.html
+++ b/templates/pollingstation_list.html
@@ -33,7 +33,7 @@
                                     <td>{{ poll.name }}</td>
                                     <td>{{ poll.total_voters }}</td>
                                     <td>{{ poll.latitude }}</td>
-                                    <td>{{ poll.longtitude }}</td>
+                                    <td>{{ poll.longitude }}</td>
                                     <td>{% if poll.condition == 1 %}
                                     		Good
                                     	{% endif %}
