--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="{% static 'main/css/skin-blue.min.css' %}">
      <!-- DataTables -->
     <link href="{% static 'main/css/dataTables.bootstrap.css' %}" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -112,6 +113,10 @@
     <script src="{% static 'main/js/app.min.js' %}"></script>
     <!-- Main JS (responsible for GCM also) -->
     <script src="{% static 'main/js/main.js' %}"></script>
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
     <!-- JS for particular pages only -->
     {% block page_js %}{% endblock %}
   </body>
