Jquery useless link removed

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -276,7 +276,7 @@
   element: 'donut-example',
   data: [
     {label: "Good", value: {{good}}},
-    {label: "OK", value: {{ok}}},
+    {label: "Ok", value: {{ok}}},
     {label: "Bad", value: {{bad}}}
   ]
 });
