--- a/templates/pollingstationview.html
+++ b/templates/pollingstationview.html
@@ -26,11 +26,7 @@
 
                 <div class="info-box-content">
                   <span class="info-box-text">Current Voters</span>
-                  {% if poll_updates.current_votes %}
-                  <span class="info-box-number">{{ poll_updates.current_votes }}</span>
-                  {% else %}
-                  <span class = "info-box-number">0</span>
-                  {% endif%}
+                  <span class="info-box-number">{% current_voters polling_station %}</span>
                 </div>
                 <!-- /.info-box-content -->
               </div>
@@ -71,9 +67,14 @@
                         <h3 class="box-title">Polling Station Status</h3>
                     </div><!-- /.box-header -->
                     <div  class="box-body table-responsive">
-                    <table id="example1" class="table table-bordered table-striped">
+                    <table id="psimages" class="table table-bordered table-striped">
         
-                           
+                            <thead>
+                                <tr>
+                                    <th>Image(s)</th>                                   
+                                    <th>Timestamp</th>
+                                </tr>
+                            </thead>
                             <tbody>
                             	{% for ps in  ps_images %}
                                 <tr>
@@ -90,7 +91,6 @@
                     </div><!-- /.box-body -->
                 </div>
 	</div>
-	<div class="row">
   <div class="col-sm-6">
     <div class="box box-primary">
                     <div class="box-header">
@@ -140,6 +140,7 @@
 {% block page_js %}
     <script type="text/javascript">
     	$(document).ready(function() {
+                $("#psimages").DataTable();
                 $("#example2").DataTable();
         });
     </script>
